--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@ localStorage.setItem("orderData", hash)
 
 }
 
-async function formSubmit() {
+const formSubmit = async () => {
 
 let eth;
 const url = "https://min-api.cryptocompare.com/data/price?fsym=ETH&tsyms=BTC,USD,EUR"
