--- a/index.html
+++ b/index.html
@@ -238,11 +238,11 @@ async function confirmOrder(e) {
 
 let i = orders.findIndex(m => m.id === e);
 
-let eth;
-const url = "https://min-api.cryptocompare.com/data/price?fsym=ETH&tsyms=BTC,USD,EUR"
+const [eth, setEth] = useState();
+const url = "https://min-api.cryptocompare.com/data/price?fsym=ETH&tsyms=BTC,USD,EUR&api_key=4840089d874b59a6452033d2a75aa08929c3c7af03f382ad460dd1d854d6d266"
 const response = await fetch(url);
 return response.json().then((k) => {
-  eth = orders[i].total/k.USD
+  setEth(orders[i].total/k.USD)
 })
 
 if(orders[i].status == "shipped") {
@@ -277,11 +277,11 @@ async function cancelOrder(e) {
 
 let i = orders.findIndex(m => m.id === e);
 
-let eth;
-const url = "https://min-api.cryptocompare.com/data/price?fsym=ETH&tsyms=BTC,USD,EUR"
+const [eth, setEth] = useState();
+const url = "https://min-api.cryptocompare.com/data/price?fsym=ETH&tsyms=BTC,USD,EUR&api_key=4840089d874b59a6452033d2a75aa08929c3c7af03f382ad460dd1d854d6d266"
 const response = await fetch(url);
 return response.json().then((k) => {
-  eth = orders[i].total/k.USD
+  setEth(orders[i].total/k.USD)
 })
 
 if(orders[i].status == "false"||orders[i].status == "shipped") {
@@ -787,7 +787,12 @@ localStorage.setItem("orderData", hash)
 
 const formSubmit = async () => {
 
-let eth = 0.1
+const [eth, setEth] = useState();
+const url = "https://min-api.cryptocompare.com/data/price?fsym=ETH&tsyms=BTC,USD,EUR&api_key=4840089d874b59a6452033d2a75aa08929c3c7af03f382ad460dd1d854d6d266"
+const response = await fetch(url);
+return response.json().then((k) => {
+  setEth(total/k.USD)
+})
 
 if(orderData.name !==""&&orderData.pno !==""&&orderData.cpno !==""&&orderData.pno.length==10&&orderData.pno ==orderData.cpno &&orderData.hno !==""&&orderData.hno !==""&&orderData.area !==""&&orderData.lmark !==""&&orderData.city !==""&&orderData.pinno !==""&&orderData.pinno.length==6&&orderData.state !==""&& orderData.country !=="" && products.filter(e => localStorage.getItem(e.id)!==null).length!==0){
 
