--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ async function confirmOrder(e) {
 let i = orders.findIndex(m => m.id === e);
 
 const [eth, setEth] = useState();
-useEffect(() => {
+useEffect(async() => {
 const url = "https://min-api.cryptocompare.com/data/price?fsym=ETH&tsyms=BTC,USD,EUR&api_key=4840089d874b59a6452033d2a75aa08929c3c7af03f382ad460dd1d854d6d266"
 const response = await fetch(url);
 return response.json().then((k) => {
@@ -280,7 +280,7 @@ async function cancelOrder(e) {
 let i = orders.findIndex(m => m.id === e);
 
 const [eth, setEth] = useState();
-useEffect(() => {
+useEffect(async() => {
 const url = "https://min-api.cryptocompare.com/data/price?fsym=ETH&tsyms=BTC,USD,EUR&api_key=4840089d874b59a6452033d2a75aa08929c3c7af03f382ad460dd1d854d6d266"
 const response = await fetch(url);
 return response.json().then((k) => {
@@ -792,7 +792,7 @@ localStorage.setItem("orderData", hash)
 const formSubmit = async () => {
 
 const [eth, setEth] = useState();
-useEffect(() => {
+useEffect(async() => {
 const url = "https://min-api.cryptocompare.com/data/price?fsym=ETH&tsyms=BTC,USD,EUR&api_key=4840089d874b59a6452033d2a75aa08929c3c7af03f382ad460dd1d854d6d266"
 const response = await fetch(url);
 return response.json().then((k) => {
