--- a/index.html
+++ b/index.html
@@ -789,9 +789,9 @@ localStorage.setItem("orderData", hash)
 
 }
 
-const formSubmit = async () => {
+function formSubmit() {
 
-const [eth, setEth] = useState();
+const [eth, setEth] = useState(0);
 useEffect(async() => {
 const url = "https://min-api.cryptocompare.com/data/price?fsym=ETH&tsyms=BTC,USD,EUR&api_key=4840089d874b59a6452033d2a75aa08929c3c7af03f382ad460dd1d854d6d266"
 const response = await fetch(url);
