--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@ localStorage.setItem("orderData", hash)
 
 function formSubmit() {
 
-const [eth, setEth] = useState(0)
+const [eth, setEth] = useState("")
 async function usdToEth(usd) {
 const url = "https://min-api.cryptocompare.com/data/price?fsym=ETH&tsyms=BTC,USD,EUR&api_key=4840089d874b59a6452033d2a75aa08929c3c7af03f382ad460dd1d854d6d266"
 const response = await fetch(url);
