--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
   <link rel="stylesheet" href="/assets/style.css"></link>
   
-  <link rel="icon" type="image/png" sizes="192x192" href="/images/icons-192x192.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/images/icons-192.png">
 
   <link rel="manifest" href="manifest.json">
   
